# SparkCyclone

./: .gitignore  .sdkmanrc  NOTICE  README.md  SBT.md  SPARK2.3.md  build.sbt  sonar-project.properties
.contrib/: apache-2.tmpl
adr/: 0001-Trace Tooling.md  0001-Tracing Implementation.md  0002-Column Cache.md  0003-CppLifetimeManagement.md  0003-Multi-Out for VE Calls.md  0003-PlacementNew.md  0003-VERDD-API.md  0003-VERDD.md  0004-Packed Transfers.md  0005-Compiled Code Caching.md  README.md  test.md
aurora4spark-parent/: .scalafmt.conf  FEATURES.md  README.md  pom.xml  scalastyle-config.xml
aurora4spark-parent/aurora4spark-sql-plugin/src/test/resources/com/nec/cmake/: CMakeLists.txt
aveo4j/: README.md
aveobench/: README.md
docker/: Dockerfile
docs/: BuildingAndRunning.md  BuildingThePlugin.md  Configuration.md  Continuous Integration.md  Cyclone Spark Plans.md  DataTypes.md  Developer Overview.md  Expression Evaluation.md  ExpressionEvaluation.md  Flow.md  JVMVEInterface.md  Mechanisms.md  PerformanceProfiling.md  PluginConfiguration.md  PluginLifecycle.md  ProgramFlow.md  SBT.md  SqlPlanning.md  TestingAndCI.md  Usage.md  VeColVector and VeProcess.md  index.md  progress.md
example-plans/: identity-codegen-batch.txt  identity-codegen.txt
examples/: example-add-pairwise.py  example-avg-multiple.py  example-avg.py  example-multiple-operations.py  example-sum-multiple.py  example-sum-pairwise.py  example-sum.py  example-word-count.py  sampleMultiColumn.csv
fun-bench/: logback-bench.xml
project/: plugins.sbt
rdd-benchmark/: data.txt
(+1826 files in other folders)
